# qtshellintegration

./: AUTHORS.md  CMakeLists.txt  README.md  features.cmake
.github/workflows/: build.yml  checks.yml  copr.yml
.reuse/: dep5
src/interfaces/: CMakeLists.txt  extsessionlocksurface.cpp  extsessionlocksurface.h  extsessionlocksurface_p.h  layersurface.cpp  layersurface.h  layersurface_p.h  sessionlocksurface.cpp  sessionlocksurface.h  sessionlocksurface_p.h  wlrlayersurface.cpp  wlrlayersurface.h  wlrlayersurface_p.h
src/interfaces/declarative/: CMakeLists.txt  qtshellintegrationplugin.cpp
src/shell-integrations/ext-session-lock/: CMakeLists.txt  liri-ext-session-lock.json  qwaylandextsessionlock.cpp  qwaylandextsessionlock_p.h  qwaylandlockscreenintegration.cpp  qwaylandlockscreenintegration_p.h  qwaylandlockscreenintegrationplugin.cpp
src/shell-integrations/layer-shell/: CMakeLists.txt  qwaylandlayershellintegration.cpp  qwaylandlayershellintegration_p.h  qwaylandlayersurface.cpp  qwaylandlayersurface_p.h
